Minor fixes and Error Page dark mode adjust

--- a/src/routes/ErrorPage.css
+++ b/src/routes/ErrorPage.css
@@ -10,14 +10,14 @@
     font-size: 10rem;
     font-weight: 700;
     margin: 0;
-    color: #fff;
+    color: #333;
     text-align: center;
-    text-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     font-family: 'Inter', sans-serif;
 }
 
 .error-container p:nth-child(2) {
     font-size: 1.5rem;
     font-weight: 400;
+    color: #777;
     font-family: 'Nunito', sans-serif;
 }
